# deevo-sim

./: .dockerignore  .gitignore  API.md  AUDIT_REPORT.md  BACKEND_ALIGNMENT_PLAN.md  BUSINESS_IMPACT_LAYER_PLAN.md  BUSINESS_IMPACT_TIME_LAYER.md  CANONICAL_MODEL_ALIGNMENT.md  CLAUDE.md  DASHBOARD_STRUCTURE.md  DEPLOY_PHASE2.sh  Dockerfile.backend  EXECUTION_BLUEPRINT.md  FINAL_EXECUTION_BLUEPRINT.md  FRONTEND_REPLACEMENT_PLAN.md  LICENSE  MASTER_ANALYSIS_v4.md  Makefile  PRODUCT_RENAME_PLAN.md  PR_SUMMARY.md  RAILWAY_DEPLOYMENT_RUNBOOK.docx  RBAC_IMPLEMENTATION_PLAN.md  README.md  RELEASE_VALIDATION_REPORT.docx  REPLATFORM_EXECUTION.md  REPOSITORY_AUDIT.md  SCREENSHOT_CHECKLIST.md  V1_SCOPE.md  docker-compose.yml  railway.toml  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_data_reality_foundation_tables.py
backend/app/: main.py
backend/app/api/: auth.py  conflicts.py  decision.py  (+11 more)
backend/scripts/: governance_check.py
backend/seeds/: loader.py  scenario_seeds.py
backend/src/: config.py  decision_layer.py  explainability.py  main.py  physics_intelligence_layer.py  risk_models.py  simulation_engine.py  simulation_schemas.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_connectors.py  test_data_reality_foundation.py  test_enforcement_layer.py  test_governance_schemas.py  test_insurance.py  test_integration.py  test_p1_foundation.py  test_physics_gcc.py  test_rule_specs.py  test_scenario.py  test_scenarios_seeded.py  test_schema_validation.py  test_v4_e2e.py
(+606 files in other folders)
